force-app/main/default/objects/Error_Log__c/fields/Error_Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Error_Rule_Name__c</fullName>
    <label>Error Rule Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>