force-app/main/default/objects/Error_Log__c/fields/ErrorLineNumber__c.field-meta.xml
<CustomField>
    <fullName>ErrorLineNumber__c</fullName>
    <label>ErrorLineNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>