force-app/main/default/objects/Error_Log__c/fields/ErrorSource__c.field-meta.xml
<CustomField>
    <fullName>ErrorSource__c</fullName>
    <label>ErrorSource</label>
    <length>150</length>
    <type>Text</type>
</CustomField>