force-app/main/default/objects/Error_Log__c/fields/Object_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Method_Name__c</fullName>
    <label>Object Method Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>