force-app/main/default/objects/Error_Log__c/fields/SObjectId__c.field-meta.xml
<CustomField>
    <fullName>SObjectId__c</fullName>
    <label>SObjectId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>