force-app/main/default/objects/Error_Log__c/fields/Track_Name__c.field-meta.xml
<CustomField>
    <fullName>Track_Name__c</fullName>
    <label>Track Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>