force-app/main/default/objects/Error_Log__c/fields/XMLPayloadString__c.field-meta.xml
<CustomField>
    <fullName>XMLPayloadString__c</fullName>
    <label>XMLPayloadString</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>