force-app/main/default/objects/Error_Log__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>ErrorLineNumber__c</columns>
    <columns>Error_Description__c</columns>
    <columns>ErrorSource__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Object_Method_Name__c</columns>
    <columns>Object_Name__c</columns>
    <columns>SObjectId__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Track_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>